--- a/src/apps/uber/index.html
+++ b/src/apps/uber/index.html
@@ -1,6 +1,68 @@
-TODO: Make me pretty
+<!DOCTYPE html>
+  <html>
+    <head>
+      <!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
 
-<ul>
-  <li><a href="admin/">Admin</a></li>
-  <li><a href="client/">Client</a></li>
-</ul>
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+      <script src="lib/react.js"></script>
+      <script src="lib/react-dom.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      </head>
+
+    <body>
+      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+      <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
+
+      <div class="container">
+        <nav>
+          <div class="nav-wrapper blue-grey darken-1">
+            <a href="index.html" class="brand-logo right">Refresh My Ride!</a>
+            <ul id="nav-mobile" class="left hide-on-med-and-down">
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="admin/">Admin</a></li>
+              <li><a href="client/">Client</a></li>
+            </ul>
+          </div>
+        </nav>
+
+        <h6>Authors: Brooke, Jacob, Bader, Alex, Nico</h6>
+
+       <marquee behavior="alternate"><strong><em><h1 style="font-family= Impact; color: white">Refresh My Ride!</h1></strong></em><img src="volkswagen.png" height="100" width="150" style="text-align:center"></marquee>
+
+
+        <strong> <h4 style="color:red">Who We Are</h4></strong>
+            <p style="color:white; background-color: black">We bring basic car services to you! Need your car filled up with <em><strong>gas</em></strong>? Want you <em><strong>windshield washed</em></strong>? Need some <em><strong>air fresheners</em></strong>? Don't have time to pick these things up? Never fear: Refresh My Ride is here! We will deliver these products and services to <strong>WHEREVER</strong> our client's car is.</p>
+            <p style="color:white; background-color: black">Now serving Denver!</p>
+            <p style="color:white; background-color: black">Refresh My Ride is growing. If we are not currently in your city, check back often. We will be expanding to other cities soon.</p>
+
+            <strong><h5 style="color:red ">Sign up as a Client!</h5></strong>
+             <a class="waves-effect waves-light btn-large center" href="client/" style="text-align:center">Client</a>
+            <p style="color:white; background-color: black">If you have a car and live or work in Denver, you can use Refresh My Ride! Just visit our website and create an account. From there, you can see where providers are and tell providers what services or products you need. From there you can hire a provider near you. The provider will come to you and let you know if they need you to let them into your car via the app. All payment is handled via the app so no need to worry about having cash on hand or paying the provider directly. We charge a flat rate for any products you may purchase and then have a set service fee for each service or delivery of the product. This way you can easily see how much you are being charged for each product and for providers to deliver it to you.</p>
+
+            <strong><h5 style="color:red">Sign up as a Provider!</h5></strong>
+
+             <a class="waves-effect waves-light btn-large center" href="admin/" style="text-align:center">Admin</a>
+            <p style="color:white; background-color: black">If you have a car and can deliver products and services to cars in Denver, you can sign up as a provider. GO to our website and create a provider account. We will contact you about interviewing you. We will then confirm your hire and you can start working. Providers sign on to show clients that they are availible to provide services. You will be notified when you are hired. We will pay you 85% of the service fee that clients pay. There is no limit to the number of jobs you can do, so there is no limit to how much money you can make!</p>
+
+
+       
+
+      </div>
+
+
+<style>
+      html {
+        background: url("awesome_car.png") no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+    }
+    </style>
