--- a/src/apps/together/mockup/index.html
+++ b/src/apps/together/mockup/index.html
@@ -1,4 +1,152 @@
-TODO:
+<!DOCTYPE html>
+<html>
 
-<div>Links to the pages of your app's mockup</div>
-<div>Writeup of your ideation</div>
+<head>
+    <meta charset='utf-8' />
+    <!-- jQuery -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js'></script>
+    <!-- Firebase -->
+    <script src='https://cdn.firebase.com/js/client/2.0.2/firebase.js'></script>
+    <!-- Firechat -->
+    <link rel='stylesheet' href='https://cdn.firebase.com/libs/firechat/2.0.1/firechat.min.css' />
+    <script src='https://cdn.firebase.com/libs/firechat/2.0.1/firechat.min.js'></script>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body background="shopping-carts.png">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
+    <nav class="light-blue darken-4 darken-1 ">
+        <div class="nav-wrapper container">
+            <div class="col s6">
+                <a id="logo-container" href="/src/apps/todos/index.html" class="header black-text brand-logo center">CommunalShop</a>
+                <ul id="nav-mobile" class="left">
+                    <li><a href="/">Home</a></li>
+                </ul>
+                <ul id="nav-mobile" class="left">
+                    <li><a href='#'>Login with Github</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div>
+        <div class="row">
+            <div class="col s12 m4 l2">
+                <p> </p>
+            </div>
+            <div class="col s12 m4 l8">
+                <div class="card blue-grey darken-1">
+                    <div class="card-content white-text">
+                        <span class="card-title">Ideation</span>
+                        <div>
+                            <ul style="list-style-type:disc">
+                                <li>What is the name of your app?
+                                    <p class="black-text">CommunalShop</p>
+                                </li>
+                                <li>What collaborative activity can people do together using your app?
+                                    <p class="black-text">Online Shopping</p>
+                                </li>
+                                <li>What is the ideal number of concurrent users (must be at least 10 but no more than 40)?
+                                    <p class="black-text">It could be any number of people.</p>
+                                </li>
+                                <li>What skills do people need in order to do this activity?
+                                    <p class="black-text"> No skill required at all just need to navigate a web page.
+                                    </p>
+                                </li>
+                                <li>Is this activity for fun or for something practical?
+                                    <p class="black-text">This is a practical activity. It will help organize shopping for parties, or other big events. It will also show keep track of what has been purchased and needs to be as well as where to purchase them.</p>
+                                </li>
+                                <li>How can a person see what everyone else is doing?
+                                    <p class="black-text">There will be a shopping list that will update in real-time.</p>
+                                </li>
+                                <li>How can a person see the most recent result of everyone’s collaborative effort?
+                                    <p class="black-text">They can look at past lists they helped with or created.</p>
+                                </li>
+                                <li>What can an admin see (i.e., God’s mode)?
+                                    <p class="black-text">The admin can see all the lists from everyone.</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-panel ">
+        <div class="row" style="height: 420px;">
+            <div class="card col s3" padding="10px">
+                <div id="wrapper" style="overflow-y: scroll; height:300px;" padding="10px">
+                    <div class="row">
+                        <div class="col s8">
+                            <div class="card blue darken-4">
+                                <div class="card-content white-text">
+                                    <span class="card-title">John</span>
+                                    <p>I think we need to buy cups for the party.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s8 offset-s2" class="section scrollspy">
+                            <div class="card blue-grey darken-1">
+                                <div class="card-content white-text">
+                                    <span class="card-title">Bill</span>
+                                    <p>That's a great idea! I don't have any.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <form name="message" action="" >
+                    <input name="usermsg" type="text" id="usermsg" size="63" />
+                    <input class="bnt" name="submitmsg" type="submit" id="submitmsg" value="Send" style="padding: 5x 10px;"/>
+                </form>
+            </div>
+            <div class="card col s9" style="height: 385px;">
+                <h3>Shopping List</h3>
+                <form action="#" style="overflow-y: scroll; height:200px;">
+                    <p>
+                        <input type="checkbox" id="test1" />
+                        <label for="test1">Item1</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" id="test2" />
+                        <label for="test2">Item1</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" id="test3" />
+                        <label for="test3">Item1</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" id="test4" />
+                        <label for="test4">Item1</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" id="test5" />
+                        <label for="test5">Item1</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" id="test6" />
+                        <label for="test6">Item1</label>
+                    </p>
+                    <p>
+                        <input type="checkbox" id="test7" />
+                        <label for="test7">Item1</label>
+                    </p>
+                </form>
+                <div class="input-field col s6">
+                    <input id="item" type="text" class="validate">
+                    <label for="new_item">New Item</label>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
