--- a/src/apps/together/mockup/index.html
+++ b/src/apps/together/mockup/index.html
@@ -30,7 +30,7 @@
                     <li><a href="/">Home</a></li>
                 </ul>
                 <ul id="nav-mobile" class="left">
-                    <li><a href='#'>Login with Github</a></li>
+                    <li><a href='shopping_list.html'>Login with Github</a></li>
                 </ul>
             </div>
         </div>
@@ -74,75 +74,6 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card-panel ">
-        <div class="row" style="height: 420px;">
-            <div class="card col s3" padding="10px">
-                <div id="wrapper" style="overflow-y: scroll; height:300px;" padding="10px">
-                    <div class="row">
-                        <div class="col s8">
-                            <div class="card blue darken-4">
-                                <div class="card-content white-text">
-                                    <span class="card-title">John</span>
-                                    <p>I think we need to buy cups for the party.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s8 offset-s2" class="section scrollspy">
-                            <div class="card blue-grey darken-1">
-                                <div class="card-content white-text">
-                                    <span class="card-title">Bill</span>
-                                    <p>That's a great idea! I don't have any.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <form name="message" action="" >
-                    <input name="usermsg" type="text" id="usermsg" size="63" />
-                    <input class="bnt" name="submitmsg" type="submit" id="submitmsg" value="Send" style="padding: 5x 10px;"/>
-                </form>
-            </div>
-            <div class="card col s9" style="height: 385px;">
-                <h3>Shopping List</h3>
-                <form action="#" style="overflow-y: scroll; height:200px;">
-                    <p>
-                        <input type="checkbox" id="test1" />
-                        <label for="test1">Item1</label>
-                    </p>
-                    <p>
-                        <input type="checkbox" id="test2" />
-                        <label for="test2">Item1</label>
-                    </p>
-                    <p>
-                        <input type="checkbox" id="test3" />
-                        <label for="test3">Item1</label>
-                    </p>
-                    <p>
-                        <input type="checkbox" id="test4" />
-                        <label for="test4">Item1</label>
-                    </p>
-                    <p>
-                        <input type="checkbox" id="test5" />
-                        <label for="test5">Item1</label>
-                    </p>
-                    <p>
-                        <input type="checkbox" id="test6" />
-                        <label for="test6">Item1</label>
-                    </p>
-                    <p>
-                        <input type="checkbox" id="test7" />
-                        <label for="test7">Item1</label>
-                    </p>
-                </form>
-                <div class="input-field col s6">
-                    <input id="item" type="text" class="validate">
-                    <label for="new_item">New Item</label>
                 </div>
             </div>
         </div>
