Updated with team stuff

--- a/src/apps/uber/admin/index.html
+++ b/src/apps/uber/admin/index.html
@@ -53,9 +53,9 @@
     <!-- import each component class in components/ -->
     <!-- The order is important. Dependencies must be loaded first -->
     <script type="text/babel" src="components/user-list.jsx"></script>
-    <script type="text/babel" src="components/user-map.jsx"></script>
+    <script type="text/babel" src="components/map.jsx"></script>
     <script type="text/babel" src="components/provider-list.jsx"></script>
-    <script type="text/babel" src="components/provider-map.jsx"></script>
+    <!--<script type="text/babel" src="components/provider-map.jsx"></script>-->
 
     <!-- Main app container -->
     <script type="text/babel" src="components/app.jsx"></script>
