--- a/src/apps/together/mockup/shopping.html
+++ b/src/apps/together/mockup/shopping.html
@@ -23,22 +23,29 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
+    <ul id="dropdown1" class="dropdown-content">
+        <ul id="nav-mobile" class="left">
+            <li><a href="/">Home</a></li>
+        </ul>
+        <ul id="nav-mobile" class="left">
+            <li><a href='shopping_list.html'>Shopping Lists</a></li>
+        </ul>
+        <ul id="nav-mobile" class="left">
+            <li><a href='index.html'>Logout</a></li>
+        </ul>
+    </ul>
     <nav class="light-blue darken-4 darken-1 ">
-        <div class="nav-wrapper container">
-            <div class="col s6">
-                <a id="logo-container" href="/src/apps/todos/index.html" class="header black-text brand-logo center">CommunalShop</a>
-                <ul id="nav-mobile" class="left">
-                    <li><a href="/">Home</a></li>
-                </ul>
-                <ul id="nav-mobile" class="left">
-                    <li><a href='shopping_list.html'>Shopping Lists</a></li>
-                </ul>
-                <ul id="nav-mobile" class="left">
-                    <li><a href='index.html'>Logout</a></li>
-                </ul>
-            </div>
+        <div class="nav-wrapper">
+            <a id="logo-container" href="/src/apps/todos/index.html" class="header black-text brand-logo center">CommunalShop</a>
+            <ul class="right hide-on-med-and-down">
+                <!-- Dropdown Trigger -->
+                <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Menu<i class="material-icons right">arrow_drop_down</i></a></li>
+            </ul>
         </div>
     </nav>
+    <script type="text/javascript">
+    $(".dropdown-button").dropdown();
+    </script>
     <div class="row">
         <div class="card col s3" padding="10px" style="height: 400px;">
             <div id="wrapper" style="overflow-y: scroll; height:300px;" padding="10px">
