Added Team Updates

--- a/src/apps/uber/admin/index.html
+++ b/src/apps/uber/admin/index.html
@@ -29,19 +29,20 @@
 
   </head>
   <body>
-    <div class="container">
+   
         <nav>
           <div class="nav-wrapper blue-grey darken-1">
-            <a href="index.html" class="brand-logo right">Refresh My Ride!</a>
-            <ul id="nav-mobile" class="left hide-on-med-and-down">
-              <li><a href="../index.html">Home</a></li>
-              <li class="active"><a href="index.html">Admin</a></li>
+            <a href="../" class="brand-logo">Refresh My Ride!</a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+            <ul id="nav-mobile" class="right">
+              <li><a href="../">Home</a></li>
               <li><a href="../client/index.html">Client</a></li>
+              <li class="active"><a href="index.html">Admin</a></li>
             </ul>
           </div>
         </nav>
     </div>
-
+ <div class="container">
     <div id="app-container" class="container">
     </div>
 
