--- a/src/apps/together/mockup-team/index.html
+++ b/src/apps/together/mockup-team/index.html
@@ -1,3 +1,94 @@
-TODO:
+<!DOCTYPE html>
+<html lang="en">
 
-<div>Links to the pages of your team's app's mockup</div>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+    <title>Code Together</title>
+    <!-- CSS  -->
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+</head>
+
+<body class="bgimg">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.3.2/firebase.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.0/lodash.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="/js/materialize.js"></script>
+    <script src="/js/init.js"></script>
+    <nav class="blue darken-2" role="navigation">
+        <ul id="slide-out" class="side-nav">
+            <li><a href="/">Home</a></li>
+            <li><a href="code/">Code</a></li>
+            <li><a href="#!">Users</a></li>
+        </ul>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="/">Home</a></li>
+            <li><a href="code/">Code</a></li>
+            <li><a href="#!">Users</a></li>
+        </ul>
+        <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+    </nav>
+    <div class="section no-pad-bot" id="index-banner" >
+        <div class="container" style="background-color:white;">
+            <div ></div>
+            <h1 class="header center blue-text">Code Together</h1>
+            <div class="row center">
+                <h5 class="header col s12 light">An Easy Way to Collaborate on Code with Beautiful Syntax Highlighting and Communication</h5>
+            </div>
+            <div class="row center">
+                <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light blue">Get Started</a>
+            </div>
+            <br>
+            <br>
+        </div>
+    </div>
+    <div class="container" style="background-color:white;">
+        <div class="section">
+            <!--   Icon Section   -->
+            <div class="row">
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+                        <h5 class="center">Speeds up development</h5>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+                        <h5 class="center">User Experience Focused</h5>
+                    </div>
+                </div>
+                <div class="col s12 m4">
+                    <div class="icon-block">
+                        <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+                        <h5 class="center">Easy to work with</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="section">
+        </div>
+    </div>
+    
+    <!--  Scripts-->
+    <script>
+    $(".button-collapse").sideNav();
+    </script>
+
+    <style type="text/css">
+      .bgimg {
+          background-image: url('/startup-code-html.jpg');
+          background-size: cover;
+      }
+    </style>
+</body>
+
+</html>
