--- a/src/apps/together/code/index.html
+++ b/src/apps/together/code/index.html
@@ -34,7 +34,8 @@
     <!-- import each component class in components/ -->
     <!-- The order is important. Dependencies must be loaded first -->
     <script type="text/babel" src="components/navbar.jsx"></script>
-    <!-- <script type="text/babel" src="components/team.jsx"></script> -->
+
+    <script type="text/babel" src="components/lang.jsx"></script>
     <script type="text/babel" src="components/code.jsx"></script>
     <script type="text/babel" src="components/user.jsx"></script>
     <!-- Main app container -->
